Change Notes
============

2009-11-12 jbornema
	- ICellProvider and IKeyProvider added to support customer Key and Cell extensions
	- Refactored usage of Cell to ICell
	- IDimensionElement.getTitlePath() added
	- Cell holds now an array of double and not Double obejcts anymore. This optimizes
	  overall memory allocation. Null values are stored as Double.NaN
	- CellExt and CellExtProvider added that supports userObject
	- Cube, CubeFlexCalc and CubePreCache increased version that supports new key and cell providers

2009-11-06 FLI
	- Added sortElements to IDimensionElement interface.

2009-10-07 jbornema
	- ICube: added allowSplash methods, added getCubeType
	- IDataPool.CubeType.PRE_CACHE added (implemented in CubePreCache)
	- IDimensionResolver added to implement changing IDimensionElements during aggregation
	- Key(Key) constuctor added - minor changes
	- KeyExt added that extends Key and provides a UserObject
	- Cube.createNewKey(IDimensionElement[]) added (for customer extension to a cube implementation)
	- Cube.serializeData added to switch between data and optimized data serialization
	- CubeFlexCalc pre-cache (path caching) function moved to new CubePreCache implementation extending CubeFlexCalc
	- FileDataPoolStorageProvider supports now serialization to zip files,
	  setting zipDataPool flag or just zipping mydatapool.datapool to mydatapool.datapool.zip enables it
	  	
2009-09-28 FLI
	- LastLeafFunction no longer returns 0.0 if no element is available at all.
	- Added ICube.createKey(IDimensionElement...)

2009-08-13 RPF
	- added another "null" check on class LastLeafFunction -> findLastLeaf(), caused Nullpointer in dashboard application

2009-08-11 FLI
	- Removed cube.cleanUp() as it was not implemented.
	- Added cube.createKey() method.

2009-08-07 FLI
	- Added LastLeafFunction
	
2009-08-07 RPF
	- Added parseDimensionPath to CubeUtil.
	
2009-08-03 FLI
	- Added TempMeasure helper class.

2009-07-10 jbornema