@@ -3,11 +3,13 @@
  */
 package de.xwic.cube;
 
+import java.io.Serializable;
+
 /**
  * @author jbornema
  *
  */
-public interface IKeyProvider {
+public interface IKeyProvider extends Serializable {
 
 	/**
 	 * Creates a new Key. Used by Cube.createNewKey().
